# aws-deploy

./: .coverage  .gitignore  MANIFEST.in  README.md  deploy.py  params.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  utils.py
.cursor/rules/: code-standards.mdc
aws_deploy/: cognito.py  deploy.py  docker.py  dynamodb.py  functions.py  gateway.py  iam.py  params.py  utils.py
functions/: pre_signup.py
tests/: conftest.py  test_functions.py  tests.py
tests/simple/: test_functions_gateway.py
tests/test_data/: gateway_function.py
tests/test_data/docker_files/: Dockerfile  index.html  main.go
unittests/: tests.py
unittests/test_functions/: example.py  testing_this.py
